[gd_scene load_steps=21 format=3 uid="uid://brpogib7e8cwr"]

[ext_resource type="Script" path="res://scripts/new_player.gd" id="1_t1rwd"]
[ext_resource type="Script" path="res://first_person_camera.gd" id="2_7wlx7"]
[ext_resource type="PackedScene" uid="uid://cqtbkis2e4in1" path="res://subscenes/machine_gun.tscn" id="2_krh0t"]
[ext_resource type="Script" path="res://Weapon_Rig.gd" id="3_gcdvv"]
[ext_resource type="StyleBox" uid="uid://cyxaj5eaxlkgf" path="res://styles/panels.tres" id="3_gpyjs"]
[ext_resource type="Texture2D" uid="uid://cfqu7ih3j7kvu" path="res://images/Sci-Fi Game Icons/Black/slice15.png" id="3_mxv8g"]
[ext_resource type="FontFile" uid="uid://yo3nv03v0eyn" path="res://images/fonts/e1234/E1234.ttf" id="4_skaxy"]
[ext_resource type="Script" path="res://scripts/box_shaker.gd" id="6_1xjgj"]
[ext_resource type="Texture2D" uid="uid://cvastlcy7g15x" path="res://images/Sci-Fi Game Icons/Black/slice16.png" id="6_bu0ou"]
[ext_resource type="Texture2D" uid="uid://b3afwj2shjcsq" path="res://Textures/crosshair003.png" id="8_b8r1w"]
[ext_resource type="Script" path="res://scripts/Label.gd" id="8_ks4w3"]
[ext_resource type="FontFile" uid="uid://ecxtheu7sly3" path="res://images/fonts/liquid_crystal/LiquidCrystal-Bold.otf" id="8_lmwpj"]
[ext_resource type="PackedScene" uid="uid://pp1rlhqbj5d1" path="res://subscenes/Pistol.tscn" id="8_r4cwq"]
[ext_resource type="Script" path="res://subscenes/Message.gd" id="9_ukag0"]
[ext_resource type="AudioStream" uid="uid://svds8nnks5go" path="res://sound effect/auto_pickup.wav" id="15_vgyxg"]

[sub_resource type="Environment" id="Environment_48420"]
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.72

[sub_resource type="World3D" id="World3D_b3bj3"]
environment = SubResource("Environment_48420")

[sub_resource type="LabelSettings" id="LabelSettings_002eu"]
line_spacing = 1.0
font = ExtResource("4_skaxy")
font_size = 150
font_color = Color(0, 0.705882, 0, 1)
outline_size = 30
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5ejch"]
font = ExtResource("8_lmwpj")
font_size = 30
font_color = Color(0, 0.705882, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_36nep"]

[node name="new_player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_t1rwd")

[node name="PlayerInterface" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="PlayerInterface"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="PlayerInterface/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_b3bj3")
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
positional_shadow_atlas_size = 4096
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="HUD2" type="Control" parent="PlayerInterface/SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Ammo" type="Control" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2"]
layout_mode = 3
anchors_preset = 0
offset_top = 275.0
offset_bottom = 275.0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Ammo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.2
offset_top = 30.0
offset_right = 605.8
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
script = ExtResource("6_1xjgj")

[node name="PanelContainer2" type="PanelContainer" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Ammo/HBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_gpyjs")

[node name="TextureRect" type="TextureRect" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Ammo/HBoxContainer/PanelContainer2"]
modulate = Color(0, 0.643137, 0, 1)
layout_mode = 2
texture = ExtResource("3_mxv8g")
expand_mode = 3
stretch_mode = 3

[node name="PanelContainer3" type="PanelContainer" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Ammo/HBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_gpyjs")

[node name="Label" type="Label" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Ammo/HBoxContainer/PanelContainer3"]
layout_mode = 2
text = "8888"
label_settings = SubResource("LabelSettings_002eu")
horizontal_alignment = 1
script = ExtResource("8_ks4w3")

[node name="Health" type="Control" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Health"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -610.0
offset_top = 305.6
offset_right = -135.0
offset_bottom = 477.6
grow_vertical = 0
scale = Vector2(0.25, 0.25)

[node name="PanelContainer" type="PanelContainer" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Health/HBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_gpyjs")

[node name="TextureRect" type="TextureRect" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Health/HBoxContainer/PanelContainer"]
modulate = Color(0, 0.705882, 0, 1)
self_modulate = Color(0, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource("6_bu0ou")
stretch_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Health/HBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_gpyjs")

[node name="Label" type="Label" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2/Health/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_002eu")
horizontal_alignment = 1

[node name="Crooshair_texture" type="TextureRect" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2"]
modulate = Color(0, 0.607843, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_b8r1w")

[node name="Message" type="Label" parent="PlayerInterface/SubViewportContainer/SubViewport/HUD2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = 216.0
offset_right = 129.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
text = "+50 Automatic Ammo"
label_settings = SubResource("LabelSettings_5ejch")
horizontal_alignment = 1
script = ExtResource("9_ukag0")

[node name="weapon_camera" type="Camera3D" parent="PlayerInterface/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29919, 0)
cull_mask = 1047554
fov = 90.0

[node name="Weapon_Rig" type="Node3D" parent="PlayerInterface/SubViewportContainer/SubViewport/weapon_camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0319332, -0.415169, 0.421662)
script = ExtResource("3_gcdvv")

[node name="MachineGun" parent="PlayerInterface/SubViewportContainer/SubViewport/weapon_camera/Weapon_Rig" instance=ExtResource("2_krh0t")]
transform = Transform3D(-8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, 0.239457, 0.126252, -0.902404)
visible = false
current_ammo = 0

[node name="Pistol" parent="PlayerInterface/SubViewportContainer/SubViewport/weapon_camera/Weapon_Rig" instance=ExtResource("8_r4cwq")]
transform = Transform3D(-1.09278e-08, 0, 0.25, 0, 0.25, 0, -0.25, 0, -1.09278e-08, 0.283765, 0.139529, -1.08986)

[node name="BoxHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_36nep")

[node name="first_person_camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.555556, 0, 0, 0, 1, 0, 0.3, 0)
cull_mask = 1048573
fov = 90.0
script = ExtResource("2_7wlx7")

[node name="hit_trail" type="RayCast3D" parent="first_person_camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.927147)
target_position = Vector3(0, 0, -50)
collision_mask = 3

[node name="audio_files" type="Node3D" parent="."]

[node name="auto_ammo_pickup" type="AudioStreamPlayer3D" parent="audio_files"]
stream = ExtResource("15_vgyxg")
